<resources>
    <string name="app_name">Group 5 - Tug of Logic</string>
    <string name="title_home">Your Cards</string>
    <string name="title_board">Game Board</string>
    <string name="title_reasons">Participate Reasons</string>
    <string name="player_placeholder">Player voted</string>
    <string name="title_activity_instructor_main">MainActivity</string>
    <string name="submit_rip_btn">Submit RiP</string>
    <string name="title_instructor_game">New Game</string>
    <string name="title_instructor_mainclaim">Main Claims</string>
    <string name="title_instructor_stats">Statistics</string>
    <string name="readyCheck">Ready Check</string>
    <string name="chooseMC">Choose Main Claim</string>
    <string name="gameroom">Game Room</string>
    <string name="create_new_game">Create New Game</string>
    <string name="label_gameId">GameID:</string>
    <string name="instructor">Instructor</string>
    <string name="student">Student</string>
    <string name="blue_true">Blue True</string>
    <string name="blue_false">Blue False</string>
    <string name="red_true"> Reds True</string>
    <string name="red_false">Reds False</string>
    <string name="neutral">Neutral</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="participate_name">Student 1</string>
    <string name="rip_placeholder">Your reason in play</string>
    <string name="btn_put_to_board">Put To board</string>
    <string name="player_rip_title">Current Reason in Play and Discuss</string>
    <string name="participate_rip_title">Vote for other student\'s RiPs</string>
    <string name="sharedPref">sharedPref</string>
    <string name="mainClaimId">mainClaimId</string>
    <string name="voteTime">voteTime</string>
    <string name="waiting_for_the_vote">Waiting for the vote</string>
    <string name="btn_start_discussion">Start Discussion</string>
    <string name="txt_agree">Agree</string>
    <string name="txt_disagree">Disagree</string>
    <string name="student_mc_title">Current main claim by instructor</string>
    <string name="start_to_play">Start to play</string>
    <string name="vote_to_discuss">Vote to discuss</string>
    <string name="vote_to_drop">Vote to drop</string>
    <string name="reason_in_play_rips">Reason in Play - RIPs</string>
    <string name="wait_game_room">Waiting Game Room</string>
    <string name="game_room">Game Room</string>
    <string name="wait_for_users">Waiting for other users</string>
    <string name="wait_for_people">Waiting for people to join your room</string>
    <string name="game_id_template">\"Game ID: %s\"</string>
    <string name="game_room_template">Game Room ID: %s</string>
    <string name="no_name">No Name User</string>
    <string name="input_username">Input Username</string>
    <string name="txt_add_new_mainclaim">Add New MainClaim</string>
    <string name="txt_update_mainclaim">Update MainClaim</string>
    <string name="choose_mc">Choosing Main Claim</string>
    <string name="txt_instructor_game_stats">Game Statistics</string>
    <string name="txt_game_id">Game ID:</string>
    <string name="delete_rip">Delete RiP</string>
    <string name="edit_rip">Edit RiP</string>
    <string name="txt_date_time">Date Time:</string>
    <string name="txt_no_of_players">No. of Players:</string>
    <string name="txt_game_main_claim">Main Claim:</string>
    <string name="button_next">Next</string>
    <string name="set_time_to_vote">Set Time To Vote</string>
    <string name="set_time">Set Time</string>
    <string name="start_game">Start Game</string>
    <string name="go_to_current_game">Go To Current Game</string>
    <string name="select_main_claim">Select MainClaim To Discuss</string>
    <string name="prepare_your_rip">Prepare your RiP</string>
</resources>