<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_gameboard"
        android:name="specialtopic.groupfive.tugoflogic.student.ui.studentboardgame.GameBoardFragment"
        android:label="@string/title_board"
        tools:layout="@layout/fragment_student_gameboard" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="specialtopic.groupfive.tugoflogic.student.ui.studentripcards.RipCardFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_student_ripcards" />

    <fragment
        android:id="@+id/navigation_reasons"
        android:name="specialtopic.groupfive.tugoflogic.student.ui.studentreasons.ReasonsFragment"
        android:label="@string/title_reasons"
        tools:layout="@layout/fragment_student_reasons" />
</navigation>