<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".instructor.ui.instructorgame.InstructorGameFragment">

    <TextView
        android:id="@+id/text_instructor_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="40sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/redvsblue" />

    <Button
        android:id="@+id/btn_create_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/create_new_game"
        app:backgroundTint="#90F6A8"
        app:icon="@drawable/ic_newgame" />

    <Button
        android:id="@+id/btn_current_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#2196F3"
        android:enabled="true"
        android:text="@string/go_to_current_game"
        android:textColor="#FFFFFF" />

</LinearLayout>