<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".instructor.ui.gameroom.InstructorWaitingVoteActivity">

    <TextView
        android:id="@+id/txt_waiting_roomID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Room ID: ABC123"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_waiting_for_the_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/waiting_for_the_vote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_waiting_roomID" />

    <TextView
        android:id="@+id/txt_waiting_clock_count_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_waiting_for_the_vote" />

    <TextView
        android:id="@+id/txt_waiting_main_claim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="15"
        android:gravity="center"
        android:text="The selected Main Claim is: \n"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_waiting_clock_count_down" />

    <LinearLayout
        android:id="@+id/container_pie_chart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_waiting_main_claim">

        <!--Pie chart to display the data-->
        <org.eazegraph.lib.charts.PieChart
            android:id="@+id/pie_chart_main_claim_vote"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:padding="6dp" />

        <!--Creating another linear layout -->
        <!-- to display pie chart details -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <!--Linear layout to display Agree-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="20dp">

                <!--View to display the blue color icon-->
                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/Agree" />

                <!--Text view to display Agree text -->
                <TextView
                    android:id="@+id/txt_pie_chart_mc_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/txt_agree" />

            </LinearLayout>

            <!--Linear layout to display Disagree-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical">

                <!--View to display the yellow color icon-->
                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/Disagree" />

                <!--Text view to display Disagree -->
                <TextView
                    android:id="@+id/txt_pie_chart_mc_disagree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/txt_disagree" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_instructor_start_discussion"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/border_radius"
        android:text="@string/btn_start_discussion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>